--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
  
   <div class="btn-group">
     <button class="btn btn-clicked" data-filter="all">All</button>
-    <button class="btn" data-filter="burger">Burger</button>
-    <button class="btn" data-filter="cake">Cake</button>
-    <button class="btn" data-filter="icecream">Ice Cream</button>
+    <button class="btn" data-filter="burger">burger</button>
+    <button class="btn" data-filter="swarma">Swarma</button>
+    <button class="btn" data-filter="icecream">Ice cream</button>
   </div>
 
   <input type="text" placeholder="Search Food" id="search">
@@ -22,56 +22,56 @@
 <div class="container">
 
   <div class="box" data-item="icecream"> 
-    <img src="images/1.jpg">
+    <img src="images/111.jpg">
   </div>
-  <div class="box"  data-item="cake">
+  <div class="box"  data-item="swarma">
     <img src="images/11.jpeg">
   </div>
   <div class="box"  data-item="burger">
-    <img src="images/111.jpg">
+    <img src="images/1.jpg">
   </div>
 
 
   <div class="box" data-item="icecream"> 
-    <img src="images/2.jpeg">
+    <img src="images/222.jpg">
   </div>
-  <div class="box"  data-item="cake">
+  <div class="box"  data-item="swarma">
     <img src="images/22.jpeg">
   </div>
   <div class="box"  data-item="burger">
-    <img src="images/222.jpg">
+    <img src="images/2.jpeg">
   </div>
 
 
   <div class="box" data-item="icecream"> 
-    <img src="images/3.jpeg">
+    <img src="images/333.jpg">
   </div>
-  <div class="box"  data-item="cake">
+  <div class="box"  data-item="swarma">
     <img src="images/33.jpg">
   </div>
   <div class="box"  data-item="burger">
-    <img src="images/333.jpg">
+    <img src="images/3.jpeg">
   </div>
 
   <div class="box" data-item="icecream"> 
-    <img src="images/4.jpeg">
+    <img src="images/444.jpg">
   </div>
-  <div class="box"  data-item="cake">
+  <div class="box"  data-item="swarma">
     <img src="images/44.jpeg">
   </div>
   <div class="box"  data-item="burger">
-    <img src="images/444.jpg">
+    <img src="images/4.jpeg">
   </div>
 
 
   <div class="box" data-item="icecream"> 
-    <img src="images/5.jpeg">
+    <img src="images/555.jpg">
   </div>
-  <div class="box"  data-item="cake">
+  <div class="box"  data-item="swarma">
     <img src="images/55.jpeg">
   </div>
   <div class="box"  data-item="burger">
-    <img src="images/555.jpg">
+    <img src="images/5.jpeg">
   </div>
 
 </div>
